# psychodrive

./: .gitignore  LICENSE  README.md  chara.cpp  chara.hpp  chunli_rects.json  chunli_triggers.json  combogen.cpp  combogen.hpp  comboutils.cpp  comboutils.hpp  common_moves.json  common_rects.json  dhalsim_names.json  ed_rects.json  ed_triggers.json  emscripten_cross.txt  fixed.hpp  game_state_dump.json  game_state_dump_honda_ryu_hondagroundcombos.json  game_state_dump_ryu_honda_hondajumpattacks.json  gl3w.h  guile_charge.json  guile_commands.json  guile_names.json  guile_trigger_groups.json  guile_triggers.json  guy.cpp  guy.hpp  honda_charge.json  honda_names.json  honda_rects.json  imgui  imgui_neo_sequencer.cpp  imgui_neo_sequencer.h  input.cpp  input.hpp  jamie_commands.json  jamie_triggers.json  jp_names.json  (+21 more)
analysis_scripts/: copy_char_dumps.sh  dedupe_char_dumps.sh  s23_bisonpatch_hit_diffs  s24_scaling_changes  s26_timer_stop_analysis  s2_patch_hit_diffs  test.py
data/: battle_consts.json
data/chars/: aki19_rects.json  aki19_trigger_groups.json  aki19_triggers.json  aki21_charge.json  aki21_charinfo.json  aki22_names.json  aki23_names.json  aki_atemi.json  aki_charinfo.json  aki_names.json  aki_rects.json  aki_trigger_groups.json  aki_triggers.json  akuma20_charinfo.json  akuma21_names.json  akuma22_names.json  blanka21_charge.json  blanka21_names.json  blanka22_names.json  blanka_charge.json  blanka_charinfo.json  blanka_commands.json  blanka_names.json  blanka_rects.json  blanka_trigger_groups.json  blanka_triggers.json  cammy19_charinfo.json  cammy19_rects.json  cammy21_charinfo.json  cammy22_names.json  cammy22_triggers.json  cammy23_names.json  cammy_charinfo.json  cammy_commands.json  cammy_names.json  cammy_rects.json  cammy_trigger_groups.json  cammy_triggers.json  chunli19_names.json  chunli19_trigger_groups.json  (+160 more)
data/chars/aki/: aki23_names.json  aki23_rects.json  aki23_triggers.json  aki26_assist.json  aki26_names.json  aki30_assist.json  aki30_charinfo.json  aki30_names.json  aki30_rects.json  aki30_triggers.json  aki34_charinfo.json  aki34_rects.json  aki35_names.json  aki36_assist.json  aki36_charinfo.json  aki36_rects.json  aki36_trigger_groups.json  aki39_names.json  aki39_triggers.json  aki40_charinfo.json  aki40_commands.json  aki40_names.json  aki40_trigger_groups.json  aki40_triggers.json  aki42_names.json  aki42_rects.json
data/chars/akuma/: akuma23_names.json  akuma23_rects.json  akuma23_trigger_groups.json  akuma23_triggers.json  akuma24_triggers.json  akuma26_assist.json  akuma26_charinfo.json  akuma26_names.json  akuma30_assist.json  akuma30_charinfo.json  akuma30_names.json  akuma30_rects.json  akuma30_trigger_groups.json  akuma30_triggers.json  akuma34_assist.json  akuma34_charinfo.json  akuma34_triggers.json  akuma35_names.json  akuma36_assist.json  akuma36_charinfo.json  akuma36_rects.json  akuma39_names.json  akuma39_triggers.json  akuma40_charinfo.json  akuma40_commands.json  akuma40_names.json  akuma40_trigger_groups.json  akuma40_triggers.json  akuma42_charinfo.json  akuma42_names.json  akuma42_triggers.json
data/chars/alex/: alex40_assist.json  alex40_atemi.json  alex40_charinfo.json  alex40_names.json  alex40_rects.json  alex40_trigger_groups.json  alex40_triggers.json  alex42_assist.json  alex42_charinfo.json  alex42_names.json  alex42_rects.json  alex42_trigger_groups.json  alex42_triggers.json
data/chars/bison/: bison23_triggers.json
data/chars/blanka/: blanka19_charinfo.json  blanka19_names.json  blanka19_rects.json  blanka19_trigger_groups.json  blanka22_names.json  blanka23_names.json  blanka23_rects.json  blanka23_triggers.json  blanka24_names.json  blanka25_names.json  blanka26_assist.json  blanka26_names.json  blanka30_assist.json  blanka30_charinfo.json  blanka30_names.json  blanka30_rects.json  blanka30_trigger_groups.json  blanka30_triggers.json  blanka32_trigger_groups.json  blanka34_charinfo.json  blanka34_names.json  blanka35_names.json  blanka36_assist.json  blanka36_charinfo.json  blanka36_names.json  blanka36_rects.json  blanka37_names.json  blanka37_rects.json  blanka38_names.json  blanka39_names.json  blanka39_triggers.json  blanka40_charinfo.json  blanka40_commands.json  blanka40_names.json  blanka40_triggers.json  blanka41_names.json  blanka42_names.json  blanka42_rects.json
data/chars/cammy/: cammy19_names.json  cammy19_trigger_groups.json  cammy23_names.json  cammy23_triggers.json  cammy24_rects.json  cammy26_assist.json  cammy26_names.json  cammy30_assist.json  cammy30_charinfo.json  cammy30_names.json  cammy30_rects.json  cammy30_trigger_groups.json  cammy30_triggers.json  cammy31_trigger_groups.json  cammy34_charinfo.json  cammy34_rects.json  cammy35_names.json  cammy36_assist.json  cammy36_charinfo.json  cammy36_names.json  cammy36_rects.json  cammy39_names.json  cammy39_triggers.json  cammy40_charinfo.json  cammy40_commands.json  cammy40_names.json  cammy40_trigger_groups.json  (+2 more)
data/shaders/: frag.glsl  vert.glsl
game_state_dumps/: cammy26_bison26_ex_rev_edge.json  dict_dict_light_backfist_heavy_backfist.json  guile26_bison26_driverushpush.json  guile26_bison26_driverushpushhit.json  pushphysics_new_luke_ryu.json
game_state_dumps/old/: dash_medium_gap.json  dash_point_blank.json  dash_small_gap.json  guile_jp_66_hit_guile_combo.json
game_state_dumps/very_old/: game_state_dump_deejay_m_jackknife.json  game_state_dump_ryu19_honda19_hondacombos.json  game_state_dump_ryu_honda_hondacombos.json  game_state_dump_ryu_honda_pushphysics.json  game_state_dump_ryu_ryu.json
misc/diffs/: s24_terrypatch_diffs  s25_dec_balancepatch_diffs  s2_patch_hit_diffs  s31_kara_cancel_analysis  s36_triggerid_analysis  s3_patch_diffs  s40_patch_diffs
misc/reframework_scripts/: info_display.lua  sf6_script.lua
misc/scripts/: constants.sh  cook_all_chars.py  copy_char_dumps.sh  dedupe_char_dumps.sh  diff_moves.sh  test.py  view_move_diffs.sh
sf6_mod/: info_display.lua  sf6_script.lua
tests/: current_results.json  history_utils.py  precommit.py  prepush.py  results.json  run_tests.py  view_results.html
(+969 files in other folders)
